--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ Flask = "^2.2.2"
 commitizen = "^2.35.0"
 flask-sqlalchemy = "^3.0.2"
 Flask-Login = "^0.6.2"
+pyOpenSSL = "^22.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
