--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,11 @@ packages = [
     {include = "mistelaflask"},
 ]
 readme = "README.md"
+repository = "https://github.com/carsopre/mistela-flask"
 classifiers = [
   'Natural Language :: English',
   'Programming Language :: Python :: 3',
+  'Framework :: Flask',
 ]
 
 [tool.poetry.scripts]
