feat(mistelaflask/__init__.py): SECRET_KEY and DATABASE_URI are now read from the environment variables

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,9 @@
             "module": "flask",
             "env": {
                 "FLASK_APP": "mistelaflask",
-                "FLASK_DEBUG": "1"
+                "FLASK_DEBUG": "1",
+                "DATABASE_URI": "sqlite:///db.sqlite",
+                "SECRET_KEY": "30f545baaecde395ed8673836fd05d34",
             },
             "args": [
                 "run",
