--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 repository = "https://github.com/carsopre/mistela-flask"
 classifiers = [
   'Natural Language :: English',
-  'Development Status :: 2 - Pre-Alpha,
+  'Development Status :: 2 - Pre-Alpha',
   'Programming Language :: Python :: 3',
   'Framework :: Flask',
   'Intended Audience :: Developers',
