--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mistela-flask"
-version = "0.2.0"
+version = "0.4.0"
 description = "A multi-event planner flask application. It allows for RSVP options, authentication, and guest management"
 authors = ["Carles S. Soriano Perez <sorianoperez.carles@gmail.com>"]
 license = "MIT"
@@ -8,20 +8,30 @@ packages = [
     {include = "mistelaflask"},
 ]
 readme = "README.md"
+repository = "https://github.com/carsopre/mistela-flask"
 classifiers = [
   'Natural Language :: English',
+  'Development Status :: 2 - Pre-Alpha',
   'Programming Language :: Python :: 3',
+  'Framework :: Flask',
+  'Intended Audience :: Developers',
+  'Intended Audience :: Education',
+  'Topic :: Internet :: WWW/HTTP :: WSGI :: Application',
+  'Topic :: Software Development :: Libraries :: Python Modules',
 ]
 
 [tool.poetry.scripts]
 init_db = 'scripts.db_scripts:init_db'
+create_test_admin = 'scripts.db_scripts:create_test_admin'
+test_db = 'scripts.db_scripts:init_test_db'
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "~3.9"
 Flask = "^2.2.2"
 commitizen = "^2.35.0"
 flask-sqlalchemy = "^3.0.2"
 Flask-Login = "^0.6.2"
+pyOpenSSL = "^22.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
@@ -35,7 +45,7 @@ coverage = "^6.5.0"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "0.2.0"
+version = "0.4.0"
 changelog_file = "docs/changelog.md"
 update_changelog_on_bump = true
 tag_format = "v$major.$minor.$patch"
