feat(flask-mail): Added support to send mails when a user has sent their RSVP

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,8 @@
                 "DATABASE_URI": "sqlite:///db.sqlite",
                 "SECRET_KEY": "30f545baaecde395ed8673836fd05d34",
                 "MISTELA_TITLE": "M & C Wedding",
+                "MAIL_USERNAME": "wedding.myriam.carles@gmail.com",
+                "MAIL_PASSWORD": "bdchmlyyvpjmhgxv"
             },
             "args": [
                 "run",
