ci(generate_initial_db.py): It is now possible to generate an initial database from poetry run

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ classifiers = [
 
 [tool.poetry.scripts]
 wsgi = 'wsgi:init_mistelaflask'
+init_mistelaflask = 'scripts.generate_initial_db:init_mistelaflask'
+add_test_users = 'scripts.generate_initial_db:generate_test_data'
+
 
 [tool.poetry.dependencies]
 python = "~3.9"
