--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,10 @@
                 "FLASK_DEBUG": "1",
                 "DATABASE_URI": "sqlite:///db.sqlite",
                 "SECRET_KEY": "30f545baaecde395ed8673836fd05d34",
+                "MISTELA_TITLE": "M & C Wedding",
+                "STATIC_FOLDER": "${workspaceFolder}\\static",
+                "MAIL_USERNAME": "wedding.myriam.carles@gmail.com",
+                "MAIL_PASSWORD": "bdchmlyyvpjmhgxv"
             },
             "args": [
                 "run",
