--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mistela-flask"
-version = "0.7.0"
+version = "0.13.0"
 description = "A multi-event planner flask application. It allows for RSVP options, authentication, and guest management"
 authors = ["Carles S. Soriano Perez <sorianoperez.carles@gmail.com>"]
 license = "MIT"
@@ -21,9 +21,10 @@ classifiers = [
 ]
 
 [tool.poetry.scripts]
-init_db = 'scripts.db_scripts:init_db'
-create_test_admin = 'scripts.db_scripts:create_test_admin'
-test_db = 'scripts.db_scripts:init_test_db'
+wsgi = 'wsgi:init_mistelaflask'
+init_mistelaflask = 'scripts.generate_initial_db:init_mistelaflask'
+add_test_users = 'scripts.generate_initial_db:generate_test_data'
+
 
 [tool.poetry.dependencies]
 python = "~3.9"
@@ -32,7 +33,8 @@ commitizen = "^2.35.0"
 flask-sqlalchemy = "^3.0.2"
 Flask-Login = "^0.6.2"
 pyOpenSSL = "^22.1.0"
-Flask-Admin = "^1.6.0"
+gunicorn = "^20.1.0"
+Flask-Mail = "^0.9.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
@@ -42,11 +44,12 @@ isort = "^5.10.1"
 mkdocs = "^1.4.1"
 termcolor = "^2.0.1"
 coverage = "^6.5.0"
+Pillow = "^9.3.0"
 
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "0.7.0"
+version = "0.13.0"
 changelog_file = "docs/changelog.md"
 update_changelog_on_bump = true
 tag_format = "v$major.$minor.$patch"
